# flex_bison_with_cmake

./: CMakeLists.txt  calc.l
cmake/: flex_bison.cmake
